Add registration info, fix menu spacing issue

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@ http://www.templatemo.com/tm-406-flex
                                     </h1>
                             </div>
                             <!-- /.logo-wrapper -->
-                            <div class="col-md-10 col-sm-10 main-menu text-right">
+                            <div class="col-md-10 col-sm-10 main-menu text-left">
                                 <div class="toggle-menu visible-sm visible-xs"><i class="fa fa-bars"></i></div>
                                 <ul class="menu-first">
                                     <!--li class="active"><a href="#">Home</a></li-->
@@ -165,8 +165,8 @@ http://www.templatemo.com/tm-406-flex
                                     <li><a href="#Keynotes">Keynotes</a></li>
                                     <li><a href="#Call">Call For papers</a></li>
                                     <li><a href="#Commitee">Organization</a></li>
+                                    <li><a href="#Registration">Registration</a></li>
                                     <li><a href="#Venue">Venue</a></li>
-                                    <li><a href="#Program">Program</a></li>
                                 </ul>
                             </div>
                             <!-- /.main-menu -->
@@ -277,6 +277,7 @@ http://www.templatemo.com/tm-406-flex
                 <div class="heading-section col-md-12 text-left">
                     <h2>News</h2>
                     <ul>
+                        <li> <h3> Registration info is up. Please see <a href="#Registration">here</a></h3></li>
                         <li>
                             <h3>This year there will be a Blue-sky track , More information <a href="Call_Blue_Sky.html">here</a></li> </h3>
                             <li>
@@ -641,6 +642,46 @@ http://www.templatemo.com/tm-406-flex
         </div>
     </div>
     </div>
+    </div>
+    <div class="content-section" id="Registration" name="Registration">
+        <div class="container">
+            <div class="row">
+                <div class="heading-section col-md-12 text-left">
+                    <h2>Registration Process</h2>
+                    <p>Registration is open now, pleas follow our <a href="https://www.regonline.com/registration/checkin.aspx?MethodId=0&EventSessionId=b35c10dbfb164c5d811ebc8234d63161&EventId=2053950">portal</a> to register</p>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="heading-section col-md-12 text-left">
+                    <h2>Registration Fares</h2>
+                    <br> Below are the registration rates for Hypertext 2018. The registration rates are for the full conference, including workshops. It is also possible to register only for the workshops on Sunday or for the Creative Track.
+                    <h3>Advance Registration (Conference and Workshops)</h3>
+                    <br> Until 17 June 2018 ACM/SIG Members: USD 580.00 Non-ACM/SIG Members: USD 660.00 Students: USD 380.00
+                    <h3>Late Registration (Conference and Workshops)</h3>
+                    <br> Until 8 July 2018 ACM/SIG Members: USD 680.00 Non-ACM/SIG Members: USD 760.00 Students: USD 480.00
+                    <h3>Workshop-Only Registration (Advance, Late and On-Site)</h3>
+                    <br> ACM/SIG Members USD 200.00 Non-ACM/SIG Members USD 250.00 Additional Conference Banquet Tickets 1 ticket: USD 70.00
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="heading-section col-md-12 text-left">
+                    <h2>Requesting Visa Support Letters</h2>
+                    <br> ACM is able to provide visa support letters to attendees as well as authors with accepted papers, posters, or members of the conference committee. For visa support letters, refer all requests to supportletters@acm.org. ACM suggests posting this address on the conference web-site. Those requesting a letter should allow up to one week to receive it. All requests are handled in the order they are received. The information below should be included with the request.
+                    <ul>
+                        <li>Name (as it appears on attendee's passport) and mailing address</li>
+                        <li>The name of the conference attendees is registering for</li>
+                        <li>Attendee's registration confirmation number</li>
+                        <li>Authors may indicate their paper title. Speakers can provide the title of their talk.</li>
+                        <li>Include a fax number or email address of where letter can be sent</li>
+                    </ul>
+                    Please see the ACM Visa Support Letters web page for updates to this policy. ACM does not provide letters for transport of vendor
+                </div>
+            </div>
+        </div>
     </div>
     <div class="content-section" id="Commitee" name="Commitee">
         <div class="container">
