Update keynote 4 image

--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@ http://www.templatemo.com/tm-406-flex
                 <!-- /.team-member -->
                 <div class="team-member col-md-3 col-sm-6 service-item flip_elizabeth">
                     <div class="member-thumb">
-                        <img src="images/keynote4.jpg" alt="">
+                        <img src="images/keynote4.jpeg" alt="">
                         <div class="team-overlay">
                             <h3>Elizabeth Kittrie </h3>
                             <span>National Library of Medicine </span>
