Add optional to important dates

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@ http://www.templatemo.com/tm-406-flex
                     <h2>Important dates</h2>
                     <p><span><del><b>Workshop Proposal Deadline: <a href="https://www.timeanddate.com/countdown/generic?iso=20171211T115959&p0=103&msg=Workshop+proposal+Deadline&font=cursive">11th December 2017</a></b></del></span>
                         <br />
-                        <p><span><b>Abstract submission deadline: <a href="https://www.timeanddate.com/countdown/generic?iso=20180126T235959&p0=103&msg=Hypertext+2018+abstract+submission+deadline&font=cursive">26th January 2018</a></b></span>
+                        <p><span><b>Abstract submission deadline <b>(optional)</b>: <a href="https://www.timeanddate.com/countdown/generic?iso=20180126T235959&p0=103&msg=Hypertext+2018+abstract+submission+deadline&font=cursive">26th January 2018</a></b></span>
                             <br />
                             <p><span><b>Paper submission deadline: <a href="https://www.timeanddate.com/countdown/generic?p0=103&iso=20180202T235959&p0=256&msg=Hypertext+2018+paper+submission+deadline&font=cursive">2nd February 2018</a></b></span>
                                 <br />
