updated most of the stuff requested.

--- a/Workshop_revopid.html
+++ b/Workshop_revopid.html
@@ -158,27 +158,8 @@ http://www.templatemo.com/tm-406-flex
             <div class="container">
                 <div class="row">
                     <div class="heading-section col-md-12 text-left">
-                        <h2>Call for Tutorial Proposals</h2>
-                        <p>
-                            As part of the Hypertext 2018 program, in addition, we cordially invite proposals for tutorials from active researchers and experienced tutors in academia, industry, and government agencies. Ideally, a tutorial will cover the state-of-the-art research and ideas, innovative developments, and novel applications in a specific aspect of hypertext and social media, but proposals are especially encouraged on emerging topics, related to the main conference themes.
-                        </p>
-                        <p>
-                            Send your tutorial proposal (in PDF format, no more than 2 page-long) by email to the tutorial chairs (<b>Pete Burnap -
-				    BurnapP@cardiff.ac.uk</b> - and <b>Miriam Redi - miriam.redi@gmail,com</b>) by <b>2nd March 2018</b> with the following information:</p>
-                        <ul>
-                            <li> Title of the tutorial</li>
-                            <li> Keywords (describing the main themes of the tutorial)</li>
-                            <li> Abstract</li>
-                            <li> Description of the tutorial (topics and goals)</li>
-                            <li> Tutorial presenters biographies (1-2 paragraphs per presenter)</li>
-                            <li> Length of tutorial (1.5 or 3 hours)</li>
-                            <li> Expected background and prerequisite of audience</li>
-                            <li> Relevance of the tutorial to Hypertext 2018</li>
-                            <li> A list of references/resources to be covered in the tutorial</li>
-                            <li> Previous editions of the tutorial, if presenters have given similar tutorials elsewhere</li>
-                        </ul>
-                        <p> The accepted proposal presenters should provide comprehensive tutorial notes or slides to the tutorial audience free of charge.
-                        </p>
+			                        <h3><a href="https://sites.google.com/view/revopid-2018" target="_blank">Opinion Mining, Summarization and Diversification (RevOpiD-2018)</a></h3>
+The workshop aims at uncovering diverse perspectives to defining opinions. How can opinions be better summarized on online forums, in web search results or elsewhere? What relationships can be mapped between exchange of opinions on the web? We invite submissions on all such relatively unexplored dynamics of opinion mining and modeling. We also host a shared task on Review Opinion Diversification, wherein participants are asked to model opinions and mine them from an original dataset of more than 10,000 Amazon annotated product reviews.
                     </div>
                     <!-- /.heading-section -->
                 </div>
