--- a/index.html
+++ b/index.html
@@ -250,16 +250,18 @@ http://www.templatemo.com/tm-406-flex
                 <!-- /.col-md-8 -->
                 <div class="col-md-4 col-sm-6" id="Dates">
                     <h2>Important dates</h2>
-                    <p><span><del><b>Workshop Proposal Deadline: <a href="https://www.timeanddate.com/countdown/generic?iso=20171211T115959&p0=103&msg=Workshop+proposal+Deadline&font=cursive">11th December 2017</a></b></del></span>
-                        <br />
-                        <p><span><b>Abstract submission deadline <b>(optional)</b>: <a href="https://www.timeanddate.com/countdown/generic?iso=20180126T235959&p0=103&msg=Hypertext+2018+abstract+submission+deadline&font=cursive">26th January 2018</a></b></span>
-                            <br />
+                    <!--p><span><del><b>Workshop Proposal Deadline: <a href="https://www.timeanddate.com/countdown/generic?iso=20171211T115959&p0=103&msg=Workshop+proposal+Deadline&font=cursive">11th December 2017</a></b></del></span-->
+                        <!--br /-->
+                        <!--p><span><b>Abstract submission deadline <b>(optional)</b>: <a href="https://www.timeanddate.com/countdown/generic?iso=20180126T235959&p0=103&msg=Hypertext+2018+abstract+submission+deadline&font=cursive">26th January 2018</a></b></span-->
+                            <!--br /-->
                             <p><span><b>Paper submission deadline: <a href="https://www.timeanddate.com/countdown/generic?p0=103&iso=20180202T235959&p0=256&msg=Hypertext+2018+paper+submission+deadline&font=cursive">2nd February 2018</a></b></span>
                                 <br />
                                 <span>Acceptance notification: 2nd April 2018</span>
                                 <br />
                                 <span>Camera ready due:  1st May 2018</span>
                                 <br />
+                                <p><span><b>Tutorial submission deadline: 2nd March 2018</b></span>
+                                    <br />
                                 <p><span><b>Blue sky ideas submission deadline: <a href="https://www.timeanddate.com/countdown/generic?p0=103&iso=20180302T235959&year=2018&month=3&day=2&hour=23&min=59&sec=59&msg=Due%20date%3a%20Blue%20Sky">2nd March 2018</a></b></span>
                                     <br />
                                     <p><span>Blue sky ideas acceptance: 2nd April 2018</span>
@@ -269,8 +271,11 @@ http://www.templatemo.com/tm-406-flex
                 </div>
                 <!-- /.col-md-4 -->
                 <div class="col-md-4 col-sm-6">
-                    <a class="twitter-timeline" href="https://twitter.com/ACMHT" data-width="400" data-height="600">Tweets by ACMHT</a>
-                    <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
+			            <a class="twitter-timeline" data-dnt="true" href="https://twitter.com/search?q=%23acmht18%20OR%20%23acmht%20OR%20%40acmht%20OR%20%23ht2018%20OR%20%23acmht2018" data-widget-id="958307339626516480">Tweets about #acmht18 OR #acmht OR @acmht OR #ht2018 OR #acmht2018</a>
+            <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+
+                    <!--a class="twitter-timeline" href="https://twitter.com/ACMHT" data-width="400" data-height="600">Tweets by ACMHT</a>
+                    <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script-->
                 </div>
                 <!-- /.col-md-4 -->
             </div>
@@ -294,13 +299,14 @@ http://www.templatemo.com/tm-406-flex
                         <li>
                             <h3>This year there will be a Blue-sky track , More information <a href="Call_Blue_Sky.html">here</a></li> </h3>
                             <li>
-                                <h3>Workshops have been shortlisted for HT'18, More <a href="#Workshops">here</a></li> </h3>
+                                <h3>List of accepted Workshops can be found <a href="#Workshops">here</a></li> </h3>
                                 <li>
                                     <h3> HT 2018 Call for papers are out:  <a href="./assets/HT18 Poster.pdf">Details of CFP</a> </h3></li>
                                 <li>
                                     <h3> Due date for tutorial proposals :<a href="https://www.timeanddate.com/countdown/generic?p0=103&iso=20180302T235959&year=2018&month=3&day=2&hour=23&min=59&sec=59&msg=Due%20date%3a%20Tutorial%20Proposals">March 2nd 2018</a> </h3></li>
                                 <li>
                                     <h3> Selected papers will be invited to submit an extension to <a href="http://tweb.acm.org/">ACM Transactions on the Web</a> </h3></li>
+
                     </ul>
                 </div>
                 <!-- /.heading-section -->
@@ -622,7 +628,7 @@ http://www.templatemo.com/tm-406-flex
                         </p>
                         <p>
                             Send your tutorial proposal (in PDF format, no more than 2 page-long) by email to the tutorial chairs (<b>Pete Burnap -
- BurnapP@cardiff.ac.uk</b> - and <b>Miriam Redi - miriam.redi@gmail,com</b>) with the following information:</p>
+ BurnapP@cardiff.ac.uk</b> - and <b>Miriam Redi - miriam.redi@gmail,com</b>) by <b>2nd March 2018</b> with the following information:</p>
                         <ul>
                             <li> Title of the tutorial</li>
                             <li> Keywords (describing the main themes of the tutorial)</li>
@@ -1374,7 +1380,7 @@ http://www.templatemo.com/tm-406-flex
                 <!-- /.portfolio-item -->
                 <div class="portfolio-item col-md-3 col-sm-6">
                     <div class="portfolio-thumb">
-                        <img src="images/venue2.jpg" alt="">
+                        <img src="images/venue5.jpg" alt="">
                         <div class="portfolio-overlay">
                             <p>Venue</p>
                         </div>
@@ -1409,7 +1415,7 @@ http://www.templatemo.com/tm-406-flex
             <!-- /.row -->
             <div class="row">
                 <div class="col-md-8 col-sm-6">
-                    <p> This year the conference would be held at the city of Baltimore, Towson University Smith Hall Auditorium.
+                    <p> This year the conference would be held at the city of Baltimore, College of Liberal Arts (CLA) Building, Towson University.
                         <!-- spacing for mobile viewing -->
                         <br>
                         <br>
