--- a/Workshop_human.html
+++ b/Workshop_human.html
@@ -158,27 +158,8 @@ http://www.templatemo.com/tm-406-flex
             <div class="container">
                 <div class="row">
                     <div class="heading-section col-md-12 text-left">
-                        <h2>Call for Tutorial Proposals</h2>
-                        <p>
-                            As part of the Hypertext 2018 program, in addition, we cordially invite proposals for tutorials from active researchers and experienced tutors in academia, industry, and government agencies. Ideally, a tutorial will cover the state-of-the-art research and ideas, innovative developments, and novel applications in a specific aspect of hypertext and social media, but proposals are especially encouraged on emerging topics, related to the main conference themes.
-                        </p>
-                        <p>
-                            Send your tutorial proposal (in PDF format, no more than 2 page-long) by email to the tutorial chairs (<b>Pete Burnap -
-				    BurnapP@cardiff.ac.uk</b> - and <b>Miriam Redi - miriam.redi@gmail,com</b>) by <b>2nd March 2018</b> with the following information:</p>
-                        <ul>
-                            <li> Title of the tutorial</li>
-                            <li> Keywords (describing the main themes of the tutorial)</li>
-                            <li> Abstract</li>
-                            <li> Description of the tutorial (topics and goals)</li>
-                            <li> Tutorial presenters biographies (1-2 paragraphs per presenter)</li>
-                            <li> Length of tutorial (1.5 or 3 hours)</li>
-                            <li> Expected background and prerequisite of audience</li>
-                            <li> Relevance of the tutorial to Hypertext 2018</li>
-                            <li> A list of references/resources to be covered in the tutorial</li>
-                            <li> Previous editions of the tutorial, if presenters have given similar tutorials elsewhere</li>
-                        </ul>
-                        <p> The accepted proposal presenters should provide comprehensive tutorial notes or slides to the tutorial audience free of charge.
-                        </p>
+			<h3><a href="http://human.iisys.de/human18/" target="_blank">Human Factors in Hypertext</a> </h3>
+			HUMAN is the first workshop of a new series for the ACM Hypertext conferences. It has a strong focus on the user and thus is complementary to the strong machine analytics research direction that could be experienced in previous conferences.The user-centric view on hypertext not only includes user interfaces and interaction, but also discussions about hypertext application domains. Furthermore, the workshop raises the question of how original hypertext ideas (e. g., Doug Engelbart’s “augmenting human intellect” or Frank Halasz’ “hypertext as a medium for thinking and communication”) can improve today’s hypertext systems.
                     </div>
                     <!-- /.heading-section -->
                 </div>
